# Savibud

./: .envrc  .gitignore  README.md  docker-compose.yml  pyrightconfig.json  requirements.txt  shell.nix  sonar-project.properties
savibud-api/: .pylintrc  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  sonar-project.properties
savibud-api/adapters/in_memory/: crud.py  user_repository.py
savibud-api/adapters/ports/: account_repository.py  budget_repository.py  category_repository.py  crud.py  powens_repository.py  rule_repository.py  saving_repository.py  transaction_repository.py  user_repository.py
savibud-api/adapters/postgres/: account_repository.py  budget_repository.py  category_repository.py  crud.py  manual_account_repository.py  powens_repository.py  rule_repository.py  saving_repository.py  schema.sql  transaction_repository.py  user_repository.py
savibud-api/adapters/powens/: client.py
savibud-api/alembic/: env.py
savibud-api/alembic/versions/: 09649c6b1a49_add_powens_connection.py  (+18 more)
savibud-api/drivers/: auth_utils.py  config.py  database.py  dependencies.py  main.py
savibud-api/entities/: account.py  budget.py  category.py  powens.py  rule.py  saving.py  transaction.py  user.py
savibud-api/scheduler/: __init__.py  internal_transactions.py  main.py
savibud-api/use_cases/: account_snapshot.py  auth.py  dashboard.py  exceptions.py  internal_transfer.py  loan_account.py  process_monthly_savings.py  recalculate_savings.py  rule_engine.py  savings_import.py  sync_powens_user.py  transactions.py
(+95 files in other folders)
